--- a/frontend/src/css/Main.css
+++ b/frontend/src/css/Main.css
@@ -24,7 +24,7 @@
 .main-banner-container {
     width: 80%;
     height: 250px;
-    background-color: yellow;
+    /* background-color: yellow; */
     overflow: hidden;
     /* border: 2px solid black; */
     position: relative;
