--- a/frontend/src/css/Main.css
+++ b/frontend/src/css/Main.css
@@ -277,3 +277,21 @@
         background-color: white;
     }
 }
+
+.loading-indicator {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3; /* Light gray background border */
+    border-top: 5px solid rgb(255, 0, 0); /* Orange border for the indicator */
+    border-radius: 50%; /* Make it a circle */
+    animation: spin 1s linear infinite; /* Spin animation */
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
