--- a/frontend/src/css/Main.css
+++ b/frontend/src/css/Main.css
@@ -120,7 +120,7 @@
     grid-template-columns: repeat(6, 1fr);
     gap: 10px;
     margin-top: 10px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
 
 .parent {
@@ -130,6 +130,7 @@
     height: auto;
     border: 1px solid rgb(206, 202, 202);
     background-color: white;
+    cursor: pointer;
 }
 
 .image {
